kustomize/base/ig/ig-deployment.yaml
---
# Source: identity-platform/templates/ig-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ig
  labels:
    helm.sh/chart: identity-platform-1.0.0
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/part-of: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
    app: ig
    app.kubernetes.io/component: ig
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: identity-platform
      app.kubernetes.io/part-of: identity-platform
      app.kubernetes.io/instance: identity-platform
      app: ig
      app.kubernetes.io/component: ig
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: identity-platform
        app.kubernetes.io/part-of: identity-platform
        app.kubernetes.io/instance: identity-platform
        app: ig
        app.kubernetes.io/component: ig
    spec:
      serviceAccountName: default
      securityContext: {}
      containers:
        - name: ig
          securityContext: {}
          image: ig
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: http-admin
              containerPort: 8085
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /kube/liveness
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /kube/readiness
              port: http
            initialDelaySeconds: 5
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 512Mi
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Exists
