kustomize/base/ig/resources.yaml
---
# Source: identity-platform/templates/ig-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ig
  labels:
    helm.sh/chart: identity-platform-1.0.0
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/part-of: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
    app: ig
    app.kubernetes.io/component: ig
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 8085
      targetPort: http-admin
      protocol: TCP
      name: http-admin
  selector:
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/part-of: identity-platform
    app.kubernetes.io/instance: identity-platform
    app: ig
    app.kubernetes.io/component: ig
---
# Source: identity-platform/templates/ig-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ig
  labels:
    helm.sh/chart: identity-platform-1.0.0
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/part-of: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
    app: ig
    app.kubernetes.io/component: ig
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: identity-platform
      app.kubernetes.io/part-of: identity-platform
      app.kubernetes.io/instance: identity-platform
      app: ig
      app.kubernetes.io/component: ig
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: identity-platform
        app.kubernetes.io/part-of: identity-platform
        app.kubernetes.io/instance: identity-platform
        app: ig
        app.kubernetes.io/component: ig
    spec:
      serviceAccountName: default
      securityContext: {}
      containers:
        - name: ig
          securityContext: {}
          image: ig
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: http-admin
              containerPort: 8085
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /kube/liveness
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /kube/readiness
              port: http
            initialDelaySeconds: 5
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 512Mi
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Exists
---
# Source: identity-platform/templates/ig-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ig
  labels:
    helm.sh/chart: identity-platform-1.0.0
    app.kubernetes.io/name: identity-platform
    app.kubernetes.io/part-of: identity-platform
    app.kubernetes.io/instance: identity-platform
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
    app: ig
    app.kubernetes.io/component: ig
  annotations:
    haproxy-ingress.github.io/rewrite-target: /$2
    haproxy-ingress.github.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - identity-platform.domain.local
      secretName: tls-identity-platform.domain.local
  rules:
    - host: identity-platform.domain.local
      http:
        paths:
          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ig
                port:
                  number: 8085
          - path: /ig(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ig
                port:
                  number: 80
